<resources>
    <string name="app_name">My Second App</string>
    <string name="label_bill">Bill</string>
    <string name="amount_bill_hint">Enter bill</string>
    <string name="label_tip_percent">Tip (%)</string>
    <string name="amount_tip_percent_hint">Enter tip (%)</string>
    <string name="label_tip">Tip ($)</string>
    <string name="label_total">Total</string>
    <string name="button_calculate">CALCULATE</string>

    <!-- Mortgage -->
    <string name="label_amount">Amount</string>
    <string name="amount">$100000.00</string>
    <string name="label_years">Years</string>
    <string name="years">30</string>
    <string name="label_rate">Interest Rate</string>
    <string name="rate">3.5%</string>
    <string name="label_monthly_payment">Monthly Payment</string>
    <string name="monthly_payment">$449.04</string>
    <string name="label_total_payment">Total Payment</string>
    <string name="total_payment">$161654.66</string>
    <string name="modify_data">Modify Data</string>

    <string name="ten">10</string>
    <string name="fifteen">15</string>
    <string name="thirty">30</string>
    <string name="amountDecimal">100000.00</string>
    <string name="rateDecimal">.035</string>
    <string name="done">Done</string>

    <!-- Candy Store -->
    <string name="title_activity_main4">CandyStore</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="action_settings"></string>
    <string name="add">ADD</string>
    <string name="delete">DELETE</string>
    <string name="update">UPDATE</string>
    <string name="label_name">Name</string>
    <string name="label_price">Price</string>
    <string name="button_add">ADD</string>
    <string name="button_back">BACK</string>
    <string name="reset">RESET</string>
    <string name="title_activity_list">Menu</string>
    <string name="portrait">portrait</string>
    <string name="landscape">landscape</string>
    <string name="view1">GO TO VIEW 1</string>
    <string name="view2">GO TO VIEW 2</string>
    <string name="view3">GO TO VIEW 3</string>

    <!-- Puzzle -->
    <string name="puzzle_name">Puzzle</string>

    <!-- Cannon -->
    <string name="cannon_name">Cannon</string>
</resources>